Fixing Z-index issue.

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: var(--navbar-logowidth) 1fr;
   grid-template-rows: 4% 96%;
-  position: relative;
 }
 
 .list {
@@ -13,7 +12,7 @@
   margin: 0;
   min-width: 250px;
   border-radius: 5px;
-  z-index: 10;
+  z-index: 1;
 }
 
 .list-hidden {
