--- a/src/components/common/DropDown/Content/Profile/profile.css
+++ b/src/components/common/DropDown/Content/Profile/profile.css
@@ -2,6 +2,8 @@
   border-radius: 20px;
   background-color: #f1f6ff;
   margin-left: -360px;
+  position: relative;
+  z-index: 1;
 }
 
 .profile-visible {
